package io.github.mosser.arduinoml.ens.generator;

public interface Visitable {

	void accept(Visitor visitor);

}
